--- a/src/Assets/Storyboards/Storyboard.storyboard
+++ b/src/Assets/Storyboards/Storyboard.storyboard
@@ -827,6 +827,10 @@
                                                     <rect key="frame" x="0.0" y="12" width="7" height="19"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="statusIndicator.png" id="wBB-BK-VzG">
+                                                    <rect key="frame" x="256" y="12" width="8" height="19"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e23-n6-a0E">
                                                     <rect key="frame" x="15" y="11" width="10" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -849,16 +853,12 @@
                                                     <rect key="frame" x="0.0" y="42" width="264" height="2"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" id="UkV-mo-92X">
-                                                    <rect key="frame" x="236" y="12" width="20" height="20"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" red="0.16078431369999999" green="0.16862745100000001" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
-                                            <outlet property="activityIndicatorLed" destination="UkV-mo-92X" id="uVB-hd-RVx"/>
+                                            <outlet property="activityIndicatorLed" destination="wBB-BK-VzG" id="ZXF-yg-mAQ"/>
                                             <outlet property="channelName" destination="fd3-tG-kA3" id="iiJ-Qg-210"/>
                                             <outlet property="messageIndicator" destination="Uqs-1O-c5f" id="a5z-Uh-K50"/>
                                             <outlet property="type" destination="e23-n6-a0E" id="M1G-iX-JRt"/>
@@ -918,6 +918,7 @@
         <image name="menu.png" width="24" height="24"/>
         <image name="newMessages.png" width="7" height="19"/>
         <image name="separator.png" width="320" height="4"/>
+        <image name="statusIndicator.png" width="7" height="19"/>
     </resources>
     <color key="tintColor" red="0.054901960784313725" green="0.058823529411764705" blue="0.062745098039215685" alpha="1" colorSpace="calibratedRGB"/>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
